--- a/RedisChaeGrowthplan/appsettings.json
+++ b/RedisChaeGrowthplan/appsettings.json
@@ -10,7 +10,7 @@
   },
 
   "Cache": {
-    "RedisConnectionString": "localhost",
+    "RedisConnectionString": "192.168.40.136:6379,allowAdmin=true,password=123456,defaultdatabase=5",
     "InstanceName":"Redis"
   }
 }
